# startup-scout-ai

./: .env.example  .gitignore  README.md  apply_avoid_fix_v2.py  apply_hn_filtering_fix.py  apply_persistence_and_tc_filter.py  apply_persistence_fix_v2.py  apply_reddit_connector.py  apply_report_conflict_fix.py  apply_scoring_fix_v2.py  apply_techcrunch_connector.py  apply_trend_category_fix_v2.py  apply_yc_simplify_final.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
config/: config.yaml  profile.yaml
data/: startup_scout.db
reports/: 2026-07-03.md  2026-07-06.md  2026-07-13.md  2026-07-20.md
startup_scout/: __init__.py  analysis.py  categorize.py  config.py  db.py  dedupe.py  logging_config.py  memory.py  models.py  pipeline.py  report.py  scoring.py  trends.py
startup_scout/connectors/: __init__.py  base.py  hacker_news.py  product_hunt.py  reddit.py  stubs.py  techcrunch.py  ycombinator.py
tests/: test_analysis.py  test_categorize.py  test_connectors_hacker_news.py  test_connectors_reddit.py  test_connectors_techcrunch.py  test_connectors_ycombinator.py  test_db.py  test_dedupe.py  test_report.py  test_scoring.py  test_trends.py
