[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "startup-scout-ai"
version = "0.1.0"
description = "Discovers, analyzes, and ranks startup ideas against a personal founder profile."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["startup_scout*"]
